internal/render/testdata/humpty/k8s/humpty/base/deployment.yaml
# Generated by deploybot. Do not edit.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humpty
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: humpty
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: humpty
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: deploybot
        app.kubernetes.io/name: humpty
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - name: web
          image: ghcr.io/ianunruh/humpty:main
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 64Mi
