internal/render/testdata/humpty/k8s/humpty/base/service.yaml
# Generated by deploybot. Do not edit.
apiVersion: v1
kind: Service
metadata:
  name: humpty
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: humpty
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
